# fastapi_boilerplate

./: alembic.ini  main.py  pyproject.toml
src/api/middleware/: logger_middleware.py
src/core/: config.py  logger.py
src/core/exceptions/: http_error_handlers.py  http_exceptions.py
src/infrastructure/database/: postgres_db.py  redis.py
src/infrastructure/email_provider/: __init__.py  resend.py  smtp.py
src/models/: otp.py  user.py
src/repository/: otp_repository.py  user_repository.py
src/schema/: base_response.py
src/service/auth/: otp_auth.py
