[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi-mail>=1.6.5",
    "fastapi[standard]>=0.138.0",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.0",
    "resend>=2.32.2",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
]
